RESOLVED FIXED 50871
enumeration value ‘ResponseTypeArrayBuffer’ not handled in switch
https://bugs.webkit.org/show_bug.cgi?id=50871
Summary enumeration value ‘ResponseTypeArrayBuffer’ not handled in switch
Joone Hur
Reported 2010-12-11 06:19:14 PST
There is a waring during building JavaScriptCore as follow, CXX WebCore/bindings/js/libwebkitgtk_1_0_la-JSXMLHttpRequestCustom.lo ../../WebCore/bindings/js/JSXMLHttpRequestCustom.cpp: In member function ‘JSC::JSValue WebCore::JSXMLHttpRequest::response(JSC::ExecState*) const’: ../../WebCore/bindings/js/JSXMLHttpRequestCustom.cpp:160: warning: enumeration value ‘ResponseTypeArrayBuffer’ not handled in switch
Attachments
Proposed Patch (1.47 KB, patch)
2010-12-11 06:38 PST, Joone Hur
no flags
Joone Hur
Comment 1 2010-12-11 06:38:44 PST
Created attachment 76306 [details] Proposed Patch It fixes this warning.
Alexey Proskuryakov
Comment 2 2010-12-11 09:39:39 PST
Comment on attachment 76306 [details] Proposed Patch +#else + return jsUndefined(); I'd also put an ASSERT_NOT_REACHED() there. As the spec matures, we'll need to re-check what's done to unsupported values in various cases.
WebKit Commit Bot
Comment 3 2010-12-11 10:19:48 PST
The commit-queue encountered the following flaky tests while processing attachment 76306 [details]: compositing/reflections/animation-inside-reflection.html bug 50875 (author: simon.fraser@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4 2010-12-11 10:21:03 PST
Comment on attachment 76306 [details] Proposed Patch Clearing flags on attachment: 76306 Committed r73860: <http://trac.webkit.org/changeset/73860>
WebKit Commit Bot
Comment 5 2010-12-11 10:21:09 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.