2010-12-11  Joone Hur  <joone@kldp.org>

Reviewed by Alexey Proskuryakov.

        enumeration value ‘ResponseTypeArrayBuffer’ not handled in switch
        https://bugs.webkit.org/show_bug.cgi?id=50871

        Fix the warning which occurs when enumeration value is not handled in switch.

        No new tests, no change in behavior.

        * bindings/js/JSXMLHttpRequestCustom.cpp:
        (WebCore::JSXMLHttpRequest::response):

Canonical link: https://commits.webkit.org/64221@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73860 268f45cc-cd09-0410-ab3c-d52691b4dbfc